[package]
name = "s3-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0"
futures = "0.3.21"
hmac-sha1 = "0.1.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
signal-hook = "0.3.13"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
